# pyeccp

./: .gitignore  CMakeLists.txt  基于TCP的相机控制协议.md  基于UDP的相机控制协议.md
includes/: Camera.h  ECCP.h  ECCP_code_func.h  ECCP_event.h  ECCP_net.h  List.h  Node.h  PyCameraObject.h  pubdefs.h
includes/libCodec/: BMPcodec.h
includes/libOS/: stream.h
src/: BMPcodec.c  Camera.c  ECCP.c  ECCP_code_func.c  ECCP_event.c  ECCP_net.c  List.c  Node.c  PyCamera.c  PyCameraObject.c  PyECCP_Module.c  main.c  stream.c
test/: temp_test1.c  test1_BMPcodec.c  test2_Camera.c  test3_ECCP.c  test4_ECCP_code_func.c  test5_EventQueue.c  test6_net.c  test6_net_client.c  test6_net_server.c
